--- a/BulkyWeb/Views/Category/Edit.cshtml
+++ b/BulkyWeb/Views/Category/Edit.cshtml
@@ -1,18 +1,14 @@
 ﻿@model Category
 
 <form method="post">
-    @*    
-    if the Id name was something other than Id, 
-    like CategoryId, SN, then this would be required
-    <input asp-for="Id" hidden />*@
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary ">Create Category</h2>
+            <h2 class="text-primary ">Edit Category</h2>
             <hr />
         </div>
         <div class="mb-3 row removeOutline">
             <label asp-for="Name" class="p-0"></label>
-            <input asp-for="Name" class="form-control"/>
+            <input asp-for="Name" class="form-control" />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="mb-3 row removeOutline">
@@ -26,7 +22,7 @@
         @* Style of Create and Back button *@
         <div class="row">
             <div class="col-6">
-                <button type="submit" class="btn btn-primary form-control">Create</button>
+                <button type="submit" class="btn btn-primary form-control">Save Changes</button>
             </div>
             <div class="col-6">
                 <a asp-controller="Category" asp-action="Index" class="btn btn-secondary form-control">Back</a>
@@ -38,5 +34,5 @@
 @section Scripts{
     @{
         <partial name="_ValidationScriptsPartial" />
-    } 
+    }
 }
