Added Toastr option for success and warning message after CRUD operation.

--- a/BulkyWeb/Views/Category/Create.cshtml
+++ b/BulkyWeb/Views/Category/Create.cshtml
@@ -26,10 +26,10 @@
         @* Style of Create and Back button *@
         <div class="row">
             <div class="col-6">
-                <button type="submit" class="btn btn-primary form-control">Create</button>
+                <button type="submit" class="btn btn-primary form-control"><i class="bi bi-plus-square-dotted"></i> Create</button>
             </div>
             <div class="col-6">
-                <a asp-controller="Category" asp-action="Index" class="btn btn-secondary form-control">Back</a>
+                <a asp-controller="Category" asp-action="Index" class="btn btn-secondary form-control"><i class="bi bi-caret-left"></i> Back</a>
             </div>
         </div>
     </div>
