--- a/BulkyWeb/Views/Category/Delete.cshtml
+++ b/BulkyWeb/Views/Category/Delete.cshtml
@@ -1,7 +1,34 @@
-﻿
-@{
-    ViewData["Title"] = "Delete";
+﻿@model Category
+
+<form method="post">
+    <input asp-for="Id" hidden />
+    <div class="border p-3 mt-4">
+        <div class="row pb-2">
+            <h2 class="text-primary ">Delete Category</h2>
+            <hr />
+        </div>
+        <div class="mb-3 row removeOutline">
+            <label asp-for="Name" class="p-0"></label>
+            <input asp-for="Name" class="form-control" disabled/>
+        </div>
+        <div class="mb-3 row removeOutline">
+            <label asp-for="DisplayOrder" class="p-0"></label>
+            <input asp-for="DisplayOrder" class="form-control" disabled/>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <button type="submit" class="btn btn-danger form-control"><i class="bi bi-trash"></i> Delete</button>
+            </div>
+            <div class="col-6">
+                <a asp-controller="Category" asp-action="Index" class="btn btn-secondary form-control"><i class="bi bi-caret-left"></i> Back</a>
+            </div>
+        </div>
+    </div>
+</form>
+
+@section Scripts{
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
 }
-
-<h1>Delete</h1>
-
